--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ nav ul li{
     margin: 10px 20px;
 }
 nav ul li a{
-    color: #e5314f;
+    color: #d42d49;
     text-decoration: none;
     position: relative;
     font-size: 18px;
