--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,60 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: serif;
+    font-family: 'Arial', serif;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: #080808;
     color: #fff;
+    overflow-x: hidden;
 }
-#header{
+
+/* Header Section */
+#header {
     width: 100%;
     height: 100vh;
     background-image: url(images/img4.jpg);
-    /* background-size:inherit; */
     background-size: cover;
     background-position: center;
 }
-.container{
+
+.container {
     padding: 10px 10%;
 }
-nav{
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{
+
+nav .logo {
     width: 140px;
-
+    /* background-image: url("/logo.png"); */
 }
 
-nav ul li{
-    display: inline-block;
+nav ul {
     list-style: none;
-    margin: 10px 20px;
+    display: flex;
+    gap: 20px;
+    transition: all 0.4s ease-in-out;
 }
-nav ul li a{
-    color: #d42d49;
-    text-decoration: none;
+
+nav ul li {
     position: relative;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
     font-size: 18px;
     font-weight: 550;
 }
-nav ul li a::after{
+
+nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
@@ -50,29 +62,101 @@ nav ul li a::after{
     position: absolute;
     left: 0;
     bottom: -6px;
-    transition: 0.5s;
+    transition: width 0.5s;
 }
-nav ul li a:hover::after{
+
+nav ul li a:hover::after {
     width: 100%;
 }
-.header-text{
+
+nav .fas {
+    display: none;
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+/* -----css for small screen------ */
+/* Responsive Navigation */
+@media (max-width: 768px) {
+    nav ul {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 60%;
+        height: 100vh;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #ff004f;
+        z-index: 10;
+    }
+
+    nav ul.open {
+        right: 0;
+    }
+
+    nav ul li {
+        margin: 15px 0;
+    }
+
+    nav .fas {
+        display: block;
+    }
+}
+
+
+nav ul #sidemenu {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    background: #ff004f;
+    transition: 0.5s;
+    z-index: 1000;
+    padding-top: 50px;
+}
+
+nav ul#sidemenu li {
+    text-align: center;
+    margin: 25px 0;
+}
+
+nav ul#sidemenu i {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    cursor: pointer;
+    color: #fff;
+}
+
+/* Header Text */
+.header-text {
     margin-top: 70px;
     font-size: 22px;
+    /* text-align: center; */
 }
-.header-text h1{
-    font-size: 60px;
+
+.header-text h1 {
+    font-size: clamp(2rem, 6vw, 3.5rem);
     margin-top: 20px;
 }
-.header-text h1 span{
+
+.header-text h1 span {
     color: #ff004f;
 }
-/* -----about----- */
 
-#about{
+
+/* About Section */
+#about {
     padding: 80px 0;
-    color:#ababab;
+    color: #ababab;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -80,15 +164,17 @@ nav ul li a:hover::after{
 .about-col-1{
     flex-basis:30%;
 }
-.about-col-1 img{
+
+.about-col-1 img {
     width: 100%;
     border-radius: 15px;
 }
-.about-col-2{
+
+.about-col-2 {
     flex-basis: 60%;
 }
 .sub-title{
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 600;
     color: #fff;
 }
@@ -132,18 +218,19 @@ nav ul li a:hover::after{
 
 }
 
-/* ----------Service ----------- */
 
-#services{
-    /* padding: 10px 0; */
+/* Services */
+#services {
+    /* padding: -50px 0; */
+    /* padding-top: -20px; */
 }
-.service-list{
+
+.service-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-
 .service-list div{
     background: #262626;
     padding: 40px;
@@ -173,17 +260,18 @@ nav ul li a:hover::after{
     transform: translateY(-10px);
 }
 
-/* -----Portfolio-------- */
 
-#portfolio{
+/* Portfolio */
+#portfolio {
     padding: 50px 0;
 }
-.work-list{
+
+.work-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
-    margin-top: 50px;
 }
+
 .work{
     border-radius: 10px;
     position: relative;
@@ -235,24 +323,8 @@ nav ul li a:hover::after{
 .work:hover .layer{
     height: 100%;
 }
-.btn{
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #db1050;
-    padding: 10px 30px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: rgb(214, 212, 209);
-    transition: background 0.8s;
+/* Contact */
 
-}
-.btn:hover{
-    background: #ff004f;
-    
-}
-
-/* -----Contact-------- */
 .contact-left{
     flex-basis: 35%;
 }
@@ -263,11 +335,12 @@ nav ul li a:hover::after{
     margin-top: 30px;
 
 }
-.contact-left p i{
+.contact-left p i {
     color: #ff004f;
     margin-right: 15px;
     font-size: 25px;
 }
+
 .social-icons{
     margin-top: 30px;
 }
@@ -282,6 +355,24 @@ nav ul li a:hover::after{
 .social-icons a:hover{
     color: #ff004f;
     transform: translateY(-5px)
+}
+
+/* Buttons */
+.btn {
+    display: inline-block;
+    margin: 20px auto;
+    padding: 10px 30px;
+    border: 1px solid #db1050;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1rem;
+    border-radius: 6px;
+    transition: background 0.8s;
+}
+
+.btn:hover {
+    background: #ff004f;
+    color: #fff;
 }
 
 .btn2{
@@ -324,9 +415,11 @@ form .btn2{
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
+    color: #ff004f;
 }
 .copyright i{
     color:#ff004f;
+    text-decoration: none;
 }
 
 /* -----css for small screen------ */
@@ -335,41 +428,108 @@ nav .fas{
     display: none;
 }
 
-@media only screen and(max-width:600px){
-    #header{
-        background-image: url(images/phoneimg.png.jpg);  
+/* Responsive Styling */
+@media screen and (max-width: 768px) {
+    /* Header Text */
+    .header-text h1 {
+        font-size: 40px;
     }
-    .header-text{
-        margin-top: 100%;
-        font-size: 16px;
 
+    .header-text {
+        font-size: 18px;
+        margin-top: 120px;
     }
-    .header-text h1{
+
+    /* Navigation */
+    nav .fas {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+    }
+
+    nav ul #sidemenu {
+        display: block;
+    }
+
+    /* About Section */
+    .row {
+        flex-direction: column;
+    }
+
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-2 {
+        margin-top: 20px;
+    }
+}
+/* Portfolio Images */
+.work img {
+    transition: transform 0.5s ease;
+}
+
+.work:hover img {
+    transform: scale(1.05);
+}
+
+.layer {
+    transition: height 0.9s ease-in-out;
+}
+
+.work:hover .layer {
+    height: 100%;
+}
+
+@media screen and (max-width: 480px) {
+    .header-text h1 {
         font-size: 30px;
     }
-    nav .fas{
-        display: block;
+
+    .header-text {
+        font-size: 16px;
+    }
+
+    .service-list {
+        grid-template-columns: 1fr;
+    }
+
+    .work-list {
+        grid-template-columns: 1fr;
+    }
+
+    .social-icons a {
         font-size: 25px;
     }
-    nav ul {
-        background: #ff004f;
-        position: fixed;
-        top: 0;
-        right: -200px;
-        width: 200px;
-        height: 100vh;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right(0.5s);
-    }
-    nav ul li{
-        display: block;
-        margin: 25px;
-    }
-    nav ul fas{
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
-    }
+}
+
+/* -------- forms ------- */
+
+.forms{
+    height: 3rem;
+    color: whitesmoke;
+    width: 8rem;
+    text-decoration: none;
+    background-color: transparent;
+    border: 1px solid #ff004f;
+    text-decoration: none;
+    border-radius: 5px;
+    /* color: whitesmoke; */
+    outline: none;
+    display: inline-block;
+
+    align-items: center;
+    justify-content: center;
+}
+.forms:hover{
+    background-color:#ff004f;
+    color: whitesmoke;
+}
+
+
+/* ------ extra space ------ */
+.space{
+    height: 60px;
 }
