--- a/style/styles.css
+++ b/style/styles.css
@@ -41,22 +41,7 @@ body {
     background-color: #ff004f;
     border: 1px solid #e12f68;
 }
-/* change profile  */
-.btn6{
-    color: rgb(219, 214, 214);
-    font-weight: 600;
-    width: 8rem;
-    margin-right: -100px;
-    border: 1px solid #ff004f;
-    transition: background 0.8s;
-    background-color: transparent;
-    text-decoration: none;
-}
-.btn6:hover{
-    color: whitesmoke;
-    background-color: #ff004f;
-    border: 1px solid #e12f68;
-}
+
 .nav{
     /* background: #fff; */
     display: flex;
@@ -120,10 +105,10 @@ main{
 /* Header Section */
 #header {
     width: 100%;
-    height: 100vh;
-    background-image: url(images/img4.jpg);
+    height: 90vh;
+    /* background-image: url(images/img4.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
     /* background-color: transparent; */
 }
 .header-text h1, span{
@@ -341,6 +326,13 @@ nav ul#sidemenu i {
 
 .about-col-2 {
     flex-basis: 60%;
+
+}
+.about-col-2 .about{
+    align-items: center;
+    text-align: left;
+    /* display: flex; */
+    /* justify-content: start; */
 }
 .sub-title{
     font-size: 40px;
@@ -433,11 +425,14 @@ nav ul#sidemenu i {
 }
 
 
-/* Portfolio */
+/* work */
 #portfolio {
     padding: 50px 0;
 }
-
+.sub-title:hover{
+    color: #ff004f;
+    transition : transform 0.9s;
+}
 .work-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -450,7 +445,7 @@ nav ul#sidemenu i {
     overflow: hidden;
 }
 .work img{
-    /* width: 80%; */
+    width: 100%; 
     height: 100%;
     border-radius: 10px;
     display: block;
@@ -492,6 +487,7 @@ nav ul#sidemenu i {
 }
 .work:hover img{
     transform: scale(1.1);
+    transition : transform 0.5s;
 }
 .work:hover .layer{
     height: 100%;
@@ -506,19 +502,24 @@ nav ul#sidemenu i {
 }
 .contact-left p{
     margin-top: 30px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 
 }
 .contact-left p i {
     color: #870bcf;
     /* margin-right: 15px; */
-    /* margin-left: -370px; */
+    margin-left: -23rem;
+    align-items: start;
     font-size: 30px;
 
 }
 .contact-left p i:hover{
     color: #ff004f;
-   margin-left: 60px;
-    transform: translateY(-5px)
+    transition: transform (0.5s);
+   /* margin-left: 60px; */
+    /* transform: translateY(-5px) */
 }
 
 .social-icons{
@@ -729,10 +730,12 @@ nav .fas{
     width: 10rem;
     background-color: #080808;
     transition: background 0.8s;
+    border: 1px solid #ff004f;
 }
 .forms a{
     display: block;
-    color: #ff004f;
+    color:white;
+    
     justify-content: space-evenly;
     text-decoration: none;
     transition: background 0.8s;
@@ -755,3 +758,22 @@ nav .fas{
     height: 60px;
 }
 
+/* change profile  */
+
+.btn6{
+    text-decoration: none;
+    color:#dc356a;
+    font-weight: 500;
+    display: flex;
+    width: 100%;
+    /* border: 1px solid #ff004f; */
+    /* border-radius: 10px; */
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(40, 40, 40);
+}
+.btn6:hover{
+    color: #ff004f;
+
+}
